# osint-agent-public

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  .sync-config.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  INTERNAL_DEVELOPMENT.md  INTERNAL_THREAT_ACTOR_NOTES.md  LICENSE  Makefile  Makefile.example  OSINT_AGENT_PROPOSAL.md  QUICKSTART.md  README.md  SECURITY.md  USE_CASES.md  codecov.yml  pyproject.toml  setup.sh
..bfg-report/2026-02-03/09-34-47/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
..bfg-report/2026-02-03/09-34-48/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
..bfg-report/2026-02-03/12-33-30/: cache-stats.txt  changed-files.txt  object-id-map.old-new.txt
.claude/commands/: cve.md  extract-iocs.md  intel.md  investigate.md  iocs.md  review.md  watchlist.md
.claude/commands/install/: command.md  metadata.json
.claude/data/cache/: recent_critical_cves.json  recent_kev.json
.claude/data/logs/: blocked_requests.jsonl
.claude/hooks/: notification.py  post_tool_use.py  pre_tool_use.py  session_start.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.private/: .gitkeep
.private/integrations/: internal_threat_feed.py
config/: allowed_domains.json  behavior_techniques.json  settings.json  source_reliability.json  watchlist.json
config/templates/: intel_report_template.md
data/context/: operational.json  strategic.json
docs/: README.md  local-models.md  local-web-fetch.md  parallelism-design.md  permissions-setup.md
docs/archive/: SSL_FIX_SUMMARY.md
mcp-server/: README.md  pyproject.toml  server.py
mcp-server/tools/: __init__.py  abusech_tools.py  attack_tools.py  campaign_tools.py  context_tools.py  extractor_tools.py  freshrss_tools.py  health_tools.py  investigation_log_tools.py  kev_tools.py  nvd_tools.py  otx_tools.py  rule_tools.py  shodan_tools.py  stix_tools.py  web_fetch_tools.py
reports/: apex_hunter_security_audit_2026-02-02.md
scripts/: backup.sh  sync-to-public.sh  validate-public-sync.sh
src/osint_agent/: __init__.py  cache.py  campaigns.py  cli.py  context.py  correlation.py  cpe.py  extractors.py  investigation_log.py  keymanager.py  parallel.py  rules.py  stix_export.py  usage.py
src/osint_agent/clients/: __init__.py  abusech.py  attack.py  base.py  cisa_kev.py  freshrss.py  nvd.py  otx.py  secret.private.py  shodan.py
tests/: conftest.py
tests/integration/: test_mcp_tools.py
tests/unit/: test_cache.py  test_campaigns.py  test_clients.py  test_context.py  test_correlation.py  test_extractors.py  test_freshrss.py  test_investigation_log.py  test_rules.py  test_stix_export.py
