[project]
name = "osint-agent"
version = "0.1.0"
description = "OSINT Agent for cyber security research using Claude Code hooks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31,<3.0",
    "keyring>=25.0,<26.0",
    "aiohttp>=3.9,<4.0",
    "filelock>=3.13,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=4.0,<5.0",
    "pytest-timeout>=2.0,<3.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-vcr>=1.0,<2.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
    "types-requests>=2.31,<3.0",
    "responses>=0.25,<1.0",
]
# MCP integration tests require the mcp package
mcp = [
    "mcp>=1.0,<2.0",
]

[project.scripts]
osint = "osint_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osint_agent"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Line length handled separately

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 30
addopts = "-v --tb=short"
