[project]
name = "osint-agent"
version = "0.1.0"
description = "OSINT Agent for cyber security research using Claude Code hooks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31,<3.0",
    "keyring>=25.0,<26.0",
    "aiohttp>=3.9,<4.0",
    "filelock>=3.13,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=4.0,<8.0",
    "pytest-timeout>=2.0,<3.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-vcr>=1.0,<2.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
    "types-requests>=2.31,<3.0",
    "responses>=0.25,<1.0",
]
# MCP integration tests require the mcp package
mcp = [
    "mcp>=1.0,<2.0",
    "beautifulsoup4>=4.12,<5.0",
]

[project.scripts]
osint = "osint_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osint_agent"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",    # Line length handled separately
    "E741",    # Ambiguous variable names
    "F841",    # Local variable assigned but never used
    "C401",    # Unnecessary generator
    "SIM102",  # Nested if statements (readability preference)
    "SIM103",  # Return condition directly (readability preference)
    "SIM108",  # Ternary operator (readability preference)
    "SIM116",  # Dictionary instead of if statements (readability preference)
    "SIM118",  # Use key in dict instead of key in dict.keys()
    "B904",    # raise ... from err (stylistic preference)
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 30
addopts = "-v --tb=short"
