[project]
name = "osint-mcp-server"
version = "0.1.0"
description = "MCP server exposing OSINT agent capabilities to Claude Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    # Dependencies from osint-agent parent package
    "requests>=2.31",
    "keyring>=25.0",
    "aiohttp>=3.9",
    "filelock>=3.13",
]

[project.scripts]
osint-mcp = "server:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
include = ["server.py"]

[tool.hatch.build.targets.sdist]
include = [
    "server.py",
    "tools/",
    "README.md",
]
